--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -49,3 +49,10 @@ log:
 #
 #  # jaeger collector address to send application traces
 #  jaeger_addr: "http://localhost:14268/api/traces"
+
+# plugin:
+#   dir: .plugins
+#   artifacts:
+#     # refer : https://github.com/hashicorp/go-getter
+#     - ../transformers/dist/transformers_0.1.0_macos_arm64.tar.gz
+#     - https://github.com/odpf/optimus/releases/download/v0.2.5/optimus_0.2.5_linux_arm64.tar.gz
